Updated Authentication guard

--- a/Angular/JWTAuthorization/src/app/dashboard/dashboard.component.html
+++ b/Angular/JWTAuthorization/src/app/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
       <!-- Card header -->
       <mat-card-header class="card-header">
         <ul>
+            <!-- Home -->
             <li class="nav-item">
                 <a class="nav-link" routerLink='.'>Home</a>
             </li>
